syntax = "proto3";

package com.road.yishi.proto.player;

message LockAndUnlockMsg {
  int32 opType = 1;
  int32 itemPos = 2;
  int32 petId = 3;
}
