syntax = "proto3";

package com.road.yishi.proto.player;

message VicePasswordMsg {
  int32 opType = 1;
  string inputPass = 2;
  string prePass = 3;
  string newPass = 4;
  int32 result = 5;
}
